[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csdr-server"
version = "0.5.0"
description = "Minimal RTL-SDR network server in Python using pyrtlsdr and csdr"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
  {name = "Max Baykowski"}
]
dependencies = [
  "json5",
  "PyOgg",
  "sounddevice",
  "soxr",
  "pyrtlsdr; sys_platform == 'linux'",
  "pyrtlsdrlib; sys_platform == 'linux'",
]
keywords = ["rtl-sdr", "sdr", "csdr", "radio", "iq"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
  "Topic :: Communications :: Ham Radio",
]

[project.scripts]
csdr_server = "csdr_server.cli:main"
csdr_server_client = "csdr_server_client:main"

[project.urls]
Homepage = "https://github.com/maxbaykowski/csdr_server"
Repository = "https://github.com/maxbaykowski/csdr_server"

[tool.setuptools]
py-modules = ["csdr_server_client"]
packages = ["csdr_server"]
include-package-data = true
